[metadata]
name = helpful-scripts-engi
version = 0.0.1
author = Christopher Kelly
author_email = christopherkelly@engi.network
description = Engi Helpful Scripts
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/engi-network/engi-helpful-scripts
project_urls =
    Bug Tracker = https://github.com/engi-network/engi-helpful-scripts/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires = 
    coloredlogs>=15.0.1
    requests>=2.28.1

[options.packages.find]
where = src

[tool:pytest]
norecursedirs=tests/common